2020-01-07  Daniel Bates  <dabates@apple.com>

        First character in each word-wrapped line has incorrect character rect when requested range spans multiple lines
        https://bugs.webkit.org/show_bug.cgi?id=205842
        <rdar://problem/56884325>

        Reviewed by Zalan Bujtas.

        Add a new test.

        * TestWebKitAPI/Tests/WebKitCocoa/DocumentEditingContext.mm:
        (TEST):

2020-01-07  Basuke Suzuki  <basuke.suzuki@sony.com>

        check-webkit-style: bmalloc doesn't use config.h
        https://bugs.webkit.org/show_bug.cgi?id=205840

        Reviewed by Jonathan Bedard.

        * Scripts/webkitpy/style/checkers/cpp.py:
        (_IncludeState.check_next_include_order):
        (check_include_line):
        (check_has_config_header):

2020-01-07  youenn fablet  <youenn@apple.com>

        Add an option to make video capture in GPUProcess
        https://bugs.webkit.org/show_bug.cgi?id=205853

        Reviewed by Eric Carlson.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::resetPreferencesToConsistentValues):
        (WTR::updateTestOptionsFromTestHeader):
        * WebKitTestRunner/TestOptions.h:
        (WTR::TestOptions::hasSameInitializationOptions const):

2020-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK][WPE] Add API to retrieve and delete surrounding text for input methods
        https://bugs.webkit.org/show_bug.cgi?id=205716

        Reviewed by Žan Doberšek.

        Add new test case for the new API.

        * TestWebKitAPI/Tests/WebKitGLib/TestInputMethodContext.cpp:
        (webkitInputMethodContextMockFinalize):
        (webkitInputMethodContextMockNotifySurrounding):
        (webkitInputMethodContextMockReset):
        (webkit_input_method_context_mock_class_init):
        (testWebKitInputMethodContextSurrounding):
        (beforeAll):

2020-01-07  Carlos Garcia Campos  <cgarcia@igalia.com>
