@@ -1,3 +1,14 @@
+2020-01-07  Jonathan Bedard  <jbedard@apple.com>
+
+        results.webkit.org: Handle case where processing data is undefined
+        https://bugs.webkit.org/show_bug.cgi?id=205870
+
+        Rubber-stamped by Aakash Jain.
+
+        * resultsdbpy/resultsdbpy/model/upload_context.py:
+        (UploadContext._do_job_for_key): If the job content is undefined, mark the job as
+        finished.
+
 2020-01-07  Daniel Bates  <dabates@apple.com>
 
         First character in each word-wrapped line has incorrect character rect when requested range spans multiple lines
